# CIF2Peaks

./: .gitignore  AGENTS.md  README.md  README_WINDOWS.txt  build_windows_app.bat  cif2peaks_self_test_report.txt  pyproject.toml  quick_export_cif2peaks.bat  quick_export_xrd_atlas.bat  requirements.txt  start_cif2peaks.bat  start_xrd_atlas.bat  windows_self_test.bat  xrd_atlas_self_test_report.txt  启动CIF2Peaks.bat
scripts/: cif2peaks_quick_export_windows.py  cif2peaks_windows.py  package_windows_portable.py  pyi_rth_tkinter.py  xrd_atlas_quick_export_windows.py  xrd_atlas_windows.py
scripts/pyinstaller_hooks/: hook-tkinterdnd2.py
src/cif2peaks/: __init__.py  batch.py  elastic.py  elastic_io.py  exporters.py  gui.py  hkl.py  models.py  plotting.py  quick_export.py  service.py  structure.py  utils.py  xrd.py
src/xrd_atlas/: exporters.py  gui.py  models.py  quick_export.py  service.py  utils.py  xrd.py
tests/: test_cif2peaks.py  test_xrd_atlas.py
