[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cif2peaks"
version = "0.1.0"
description = "A lightweight CIF-to-indexed-powder-diffraction peak table generator for materials research."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "D-sudoasd"},
]
keywords = [
  "xrd",
  "cif",
  "materials-science",
  "crystallography",
  "powder-diffraction",
  "excel",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=2.4.1",
  "scipy>=1.17.0",
  "gemmi>=0.7.3",
  "spglib>=2.7.0",
  "pymatgen>=2025.6.14",
  "tkinterdnd2-universal>=1.7.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
]
windows = [
  "pyinstaller>=6.11",
]

[project.scripts]
cif2peaks = "cif2peaks.batch:main"
cif2peaks-peaks = "cif2peaks.batch:main"
cif2peaks-gui = "cif2peaks.gui:main"
cif2peaks-quick-export = "cif2peaks.quick_export:main"

[project.urls]
Homepage = "https://github.com/D-sudoasd/CIF2Peaks"
Repository = "https://github.com/D-sudoasd/CIF2Peaks"
Issues = "https://github.com/D-sudoasd/CIF2Peaks/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
